# anolis-workbench

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  CHANGELOG.md  CONTRIBUTING.md  README.md  TMP-quality-audit.md  TMP-quality-plan.md  pyproject.toml  requirements-lock.txt  requirements.txt  version-locations.txt  workbench-api-contract.md
.github/: dependabot.yml
.github/workflows/: check-compat-matrix.yml  ci.yml  desktop-release.yml  release.yml
anolis_workbench/cli/: validate_cli.py
anolis_workbench/core/: exporter.py  launcher.py  package_validator.py  paths.py  validator.py
anolis_workbench/schemas/: compatibility-matrix.yaml
anolis_workbench/server/: app.py
contracts/: README.md  validate-handoff-packages.py  validate-workbench-api-openapi.py  workbench-api.openapi.v1.yaml
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: commissioning-handoff-runbook.md  release-desktop-handoff.md  release-pypi-handoff.md
docs/contracts/: handoff-package-baseline.md  (+1 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
scripts/: freeze_server.py  sync-upstream-schema-from-release.py  verify-upstream-schema.py
system-composer/: pyproject.toml  start.cmd  start.sh
system-composer/backend/: server.py
system-composer/tests/unit/: launch_url_resolution.test.mjs  smoke_system_composer.py  test_control_contract.py  test_projects_validation.py  test_validator.py
tests/: test_templates.py
workbench/: start.cmd  start.sh
(+42 files in other folders)
