[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anolis-composer-backend"
version = "0.0.0"
description = "Internal Anolis System Composer backend package."
requires-python = ">=3.10"

[tool.setuptools]
packages = ["anolis_composer_backend"]

[tool.setuptools.package-dir]
anolis_composer_backend = "backend"
